--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -222,24 +222,37 @@
                             <p>訂單</p>
                         </div>
                         <div id="full_list_box_right_order_box">
-                            <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
-                            <div id="full_list_box_right_order_box_p">
-                                <p class="chbox1">客製巧克力禮盒</p>
-                                <p class="chbox1">NT.2500</p>
-                                <p class="chbox2">板狀巧克力 *1</p>
-                                <p class="chbox2">小巧克力 *3</p>
-                                <p class="chbox2">禮盒 *1</p>
-                                <p class="chbox2">卡片 *1</p>
+                            <div id="box_picture_details">
+                                <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
+                                <div id="full_list_box_right_order_box_p">
+                                    <p class="chbox1">客製巧克力禮盒</p>
+                                    <p class="chbox1">NT.2500</p>
+                                    <p class="chbox2">板狀巧克力 *1</p>
+                                    <p class="chbox2">小巧克力 *3</p>
+                                    <p class="chbox2">禮盒 *1</p>
+                                    <p class="chbox2">卡片 *1</p>
+                                </div>
                             </div>
                             <div id="full_list_box_right_order_box_butbox">
                                 <div id="full_list_box_right_order_box_but1_div">
-                                    <button id="full_list_box_right_order_box_but1">
+                                    <!-- <button id="full_list_box_right_order_box_but1">
                                         <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
                                     </button>
                                     <p id="full_list_box_right_order_box_but1_div_p3">1</p>
                                     <button id="full_list_box_right_order_box_but2">
                                         <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
-                                    </button>
+                                    </button> -->
+                                    <div id="btn3">
+                                        <div id="plus3">
+                                            <p>-</p>
+                                        </div>
+                                        <div id="numberWhich3">
+                                            <p>1</p>
+                                        </div>
+                                        <div id="minus3">
+                                            <p>+</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -262,24 +275,26 @@
                                     <img src="./images/shopping_cart_two/up.svg" alt="">
                                 </div>
                                 <div id="full_list_box_right_box3_divbox_p1_details_Gallery">
-                                    <div id="full_list_box_right_box3_divbox_p1_details_Gallery_plate_like">
-                                        <img src="./images/shopping_cart_two/Decorative_figure1.svg" alt="">
-                                    </div>
-                                    <div>
-                                        <div id="Gallery_plate_like1">
-                                            <img src="./images/shopping_cart_two/Decorative_figure2.svg" alt="">
-                                            <p>X</p>
-                                            <p>2</p>
+                                    <div id="hidden_box1">
+                                        <div id="full_list_box_right_box3_divbox_p1_details_Gallery_plate_like">
+                                            <img src="./images/shopping_cart_two/Decorative_figure1.svg" alt="">
                                         </div>
-                                        <div id="Gallery_plate_like2">
-                                            <img src="./images/shopping_cart_two/Decorative_figure3.svg" alt="">
-                                            <p>X</p>
-                                            <p>1</p>
-                                        </div>
-                                        <div id="Gallery_plate_like3">
-                                            <img src="./images/shopping_cart_two/Decorative_figure4.svg" alt="">
-                                            <p>X</p>
-                                            <p>1</p>
+                                        <div>
+                                            <div id="Gallery_plate_like1">
+                                                <img src="./images/shopping_cart_two/Decorative_figure2.svg" alt="">
+                                                <p>X</p>
+                                                <p>2</p>
+                                            </div>
+                                            <div id="Gallery_plate_like2">
+                                                <img src="./images/shopping_cart_two/Decorative_figure3.svg" alt="">
+                                                <p>X</p>
+                                                <p>1</p>
+                                            </div>
+                                            <div id="Gallery_plate_like3">
+                                                <img src="./images/shopping_cart_two/Decorative_figure4.svg" alt="">
+                                                <p>X</p>
+                                                <p>1</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div id="plate_modification_area">
@@ -301,24 +316,26 @@
                                 <img src="./images/shopping_cart_two/up.svg" alt="">
                             </div>
                             <div id="full_list_box_right_box3_divbox_p1_details_Gallery">
-                                <div id="full_list_box_right_box3_divbox_p2_details_Gallery_plate_like">
-                                    <img src="./images/shopping_cart_two/Decorative_figure5.svg" alt="">
-                                </div>
-                                <div>
-                                    <div id="Gallery_plate_like1">
-                                        <img src="./images/shopping_cart_two/Decorative_figure6.svg" alt="">
-                                        <p>X</p>
-                                        <p>1</p>
+                                <div id="hidden_box2">
+                                    <div id="full_list_box_right_box3_divbox_p2_details_Gallery_plate_like">
+                                        <img src="./images/shopping_cart_two/Decorative_figure5.svg" alt="">
                                     </div>
-                                    <div id="Gallery_plate_like2">
-                                        <img src="./images/shopping_cart_two/Decorative_figure6.svg" alt="">
-                                        <p>X</p>
-                                        <p>1</p>
-                                    </div>
-                                    <div id="Gallery_plate_like3">
-                                        <img src="./images/shopping_cart_two/Decorative_figure6.svg" alt="">
-                                        <p>X</p>
-                                        <p>1</p>
+                                    <div>
+                                        <div id="Gallery_plate_like1">
+                                            <img src="./images/shopping_cart_two/Decorative_figure6.svg" alt="">
+                                            <p>X</p>
+                                            <p>1</p>
+                                        </div>
+                                        <div id="Gallery_plate_like2">
+                                            <img src="./images/shopping_cart_two/Decorative_figure6.svg" alt="">
+                                            <p>X</p>
+                                            <p>1</p>
+                                        </div>
+                                        <div id="Gallery_plate_like3">
+                                            <img src="./images/shopping_cart_two/Decorative_figure6.svg" alt="">
+                                            <p>X</p>
+                                            <p>1</p>
+                                        </div>
                                     </div>
                                 </div>
                                 <div id="plate_modification_area2">
@@ -340,19 +357,21 @@
                             <img src="./images/shopping_cart_two/up.svg" alt="">
                         </div>
                         <div id="full_list_box_right_box3_divbox_p1_details_Gallery">
-                            <div id="full_list_box_right_box3_divbox_p2_details_Gallery_plate_like">
-                                <img src="./images/shopping_cart_two/Decorative_figure7.svg" alt="">
-                            </div>
-                            <div id="full_list_box_right_box3_divbox_p1_details_Gallery_colordiv">
-                                <div id="Gallery_plate_like1">
-                                    <img src="./images/shopping_cart_two/Decorative_figure8.svg" alt="">
-                                    <p>X</p>
-                                    <p>1</p>
+                            <div id="hidden_box3">
+                                <div id="full_list_box_right_box3_divbox_p2_details_Gallery_plate_like">
+                                    <img src="./images/shopping_cart_two/Decorative_figure7.svg" alt="">
                                 </div>
-                                <div id="Gallery_plate_like2">
-                                    <img src="./images/shopping_cart_two/Decorative_figure9.svg" alt="">
-                                    <p>X</p>
-                                    <p>1</p>
+                                <div id="full_list_box_right_box3_divbox_p1_details_Gallery_colordiv">
+                                    <div id="Gallery_plate_like1">
+                                        <img src="./images/shopping_cart_two/Decorative_figure8.svg" alt="">
+                                        <p>X</p>
+                                        <p>1</p>
+                                    </div>
+                                    <div id="Gallery_plate_like2">
+                                        <img src="./images/shopping_cart_two/Decorative_figure9.svg" alt="">
+                                        <p>X</p>
+                                        <p>1</p>
+                                    </div>
                                 </div>
                             </div>
                             <div id="plate_modification_area2">
@@ -390,24 +409,37 @@
         </div>
         <div id="full_list_box_right_order_box2">
             <div id="full_list_box_right_order_box">
-                <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
-                <div id="full_list_box_right_order_box_p">
-                    <p class="chbox1">客製巧克力禮盒</p>
-                    <p class="chbox1">NT.2500</p>
-                    <p class="chbox2">板狀巧克力 *1</p>
-                    <p class="chbox2">小巧克力 *3</p>
-                    <p class="chbox2">禮盒 *1</p>
-                    <p class="chbox2">卡片 *1</p>
+                <div id="box_picture_details2">
+                    <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
+                    <div id="full_list_box_right_order_box_p">
+                        <p class="chbox1">客製巧克力禮盒</p>
+                        <p class="chbox1">NT.2500</p>
+                        <p class="chbox2">板狀巧克力 *1</p>
+                        <p class="chbox2">小巧克力 *3</p>
+                        <p class="chbox2">禮盒 *1</p>
+                        <p class="chbox2">卡片 *1</p>
+                    </div>
                 </div>
                 <div id="full_list_box_right_order_box_butbox">
                     <div id="full_list_box_right_order_box_but1_div">
-                        <button id="full_list_box_right_order_box_but12">
+                        <!-- <button id="full_list_box_right_order_box_but12">
                             <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
                         </button>
                         <p id="full_list_box_right_order_box_butbox_p3">1</p>
                         <button id="full_list_box_right_order_box_but13">
                             <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
-                        </button>
+                        </button> -->
+                        <div id="btn4">
+                            <div id="plus4">
+                                <p>-</p>
+                            </div>
+                            <div id="numberWhich4">
+                                <p>1</p>
+                            </div>
+                            <div id="minus4">
+                                <p>+</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
