0920Chocolate_custom_screen1

--- a/Customization.html
+++ b/Customization.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,10 +27,14 @@
                     <p>拖移來裝飾巧克力</p>
                 </div>
                 <div id="Operation_tips_box1_first_row3">
+                    <div id="Operation_tips_box2_first_row3_img0">
+                    </div>
                     <img src="./images/Custom_block/left_sidebar/Operation_tips1.svg" alt=""
                         id="Operation_tips_box1_first_row3_img1">
-                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
-                        id="Operation_tips_box1_first_row3_img2">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                            id="Operation_tips_box1_first_row3_img2">
+                    </div>
                 </div>
                 <div id="Operation_tips_box1_first_row4">
                     <img src="./images/Custom_block/left_sidebar/Operation_tips1_1.svg" alt="">
@@ -45,12 +50,17 @@
                     <!-- <p>拖移來裝飾巧克力</p> -->
                 </div>
                 <div id="Operation_tips_box2_first_row3_2">
-                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
-                        id="Operation_tips_box2_first_row3_img3">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                            id="Operation_tips_box2_first_row3_img3">
+                    </div>
+
                     <img src="./images/Custom_block/left_sidebar/Operation_tips2.svg" alt=""
                         id="Operation_tips_box1_first_row3_img1">
-                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
-                        id="Operation_tips_box1_first_row3_img2_1">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                            id="Operation_tips_box1_first_row3_img2_1">
+                    </div>
                 </div>
                 <div id="Operation_tips_box1_first_row4">
                     <img src="./images/Custom_block/left_sidebar/Operation_tips2_1.svg" alt="">
@@ -66,12 +76,16 @@
                     <!-- <p>拖移來裝飾巧克力</p> -->
                 </div>
                 <div id="Operation_tips_box1_first_row3_2">
-                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
-                        id="Operation_tips_box3_first_row3_img3">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                            id="Operation_tips_box3_first_row3_img3">
+                    </div>
                     <img src="./images/Custom_block/left_sidebar/Operation_tips3.svg" alt=""
                         id="Operation_tips_box1_first_row3_img1">
-                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
-                        id="Operation_tips_box3_first_row3_img2_1">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                            id="Operation_tips_box3_first_row3_img2_1">
+                    </div>
                 </div>
                 <div id="Operation_tips_box1_first_row4">
                     <img src="./images/Custom_block/left_sidebar/Operation_tips3_1.svg" alt="">
@@ -86,13 +100,17 @@
                     <p>選擇禮盒的樣式或顏色</p>
                     <p>在卡片寫下想給她的祝福</p>
                 </div>
-                <div id="Operation_tips_box1_first_row3_2">
-                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
-                        id="Operation_tips_box4_first_row3_img3">
+                <div id="Operation_tips_box1_first_row3_3">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                            id="Operation_tips_box4_first_row3_img3">
+                    </div>
                     <img src="./images/Custom_block/left_sidebar/Operation_tips4.svg" alt=""
                         id="Operation_tips_box1_first_row3_img1">
-                    <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
-                        id="Operation_tips_box4_first_row3_img2_1">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
+                            id="Operation_tips_box4_first_row3_img2_1">
+                    </div>
                 </div>
                 <div id="Operation_tips_box1_first_row4">
                     <img src="./images/Custom_block/left_sidebar/Operation_tips4_1.svg" alt="">
@@ -108,10 +126,14 @@
                     <!-- <p>在卡片寫下想給她的祝福</p> -->
                 </div>
                 <div id="Operation_tips_box1_first_row5_2">
-                    <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
-                        id="Operation_tips_box1_first_row3_img3_1">
+                    <div>
+                        <img src="./images/Custom_block/left_sidebar/left.svg" alt=""
+                            id="Operation_tips_box1_first_row3_img3_1">
+                    </div>
                     <img src="./images/Custom_block/left_sidebar/Operation_tips5.svg" alt=""
                         id="Operation_tips_box5_first_row3_img2">
+                    <div id="Operation_tips_box2_first_row3_img0">
+                    </div>
                     <!-- <img src="./images/Custom_block/left_sidebar/right.svg" alt=""
                         id="Operation_tips_box1_first_row3_img2-1"> -->
                 </div>
@@ -140,11 +162,11 @@
             <ul id="menu_id">
                 <div id="menu_id_menu">
                     <li id="menu_id_li"><a href="./index.html">HOME</a></li>
-                    <li id="menu_id_li"><a href="#">SHOP</a></li>
-                    <li id="menu_id_li"><a href="#">ABOUT</a></li>
-                    <li id="menu_id_li"><a href="#">NEWS</a></li>
-                    <li id="menu_id_li"><a href="#">Q&A</a></li>
-                    <li id="menu_id_menu_icon"><a href="#" id="customized">
+                    <li id="menu_id_li"><a href="./shop.html">SHOP</a></li>
+                    <li id="menu_id_li"><a href="/about.html">ABOUT</a></li>
+                    <li id="menu_id_li"><a href="./news.html">NEWS</a></li>
+                    <li id="menu_id_li"><a href="./QnA.html">Q&A</a></li>
+                    <li id="menu_id_menu_icon"><a href="./Customization.html" id="customized">
                             <p>customized</p>
                         </a></li>
                 </div>
@@ -152,9 +174,9 @@
                     <li><a href="#" id="menu_id_icon_search"><img
                                 src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
                     </li>
-                    <li id="menu_id_icon_show"><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                    <li id="menu_id_icon_show"><a href="./login.html"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
                     </li>
-                    <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                    <li><a href="./shopping_cart.html"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
                                 alt=""></a></li>
                 </div>
             </ul>
@@ -168,9 +190,9 @@
                         <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
                                 alt=""></a>
                     </div>
-                <li><a href="#" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                <li><a href="./login.html" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
                 </li>
-                <li><a href="#" id="menu_id_search_li3"><img
+                <li><a href="./shopping_cart.html" id="menu_id_search_li3"><img
                             src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
                 </li>
             </ul>
@@ -270,17 +292,17 @@
                             <li>
                                 <img src="./images/Custom_block/left_menu/second_floor/Ellipse 1.svg" alt=""
                                     id="pistachio_img" draggable="true"> </img>
-                                <p>開心果</p>
+                                <p class="ingredients_text">開心果</p>
                             </li>
                             <li>
                                 <img src="./images/Custom_block/left_menu/second_floor/Ellipse_2.svg" alt=""
                                     id="almond_img_img" draggable="true"></img>
-                                <p>杏仁</p>
+                                <p class="ingredients_text">杏仁</p>
                             </li>
                             <li>
                                 <img src="./images/Custom_block/left_menu/second_floor/Ellipse 3.svg" alt=""
                                     id="dried_strawberries_img" draggable="true"> </img>
-                                <p>南瓜籽</p>
+                                <p class="ingredients_text">南瓜籽</p>
                             </li>
                         </ul>
                         <div id="left_menu2_hr">
@@ -294,17 +316,17 @@
                                 <li>
                                     <img src="./images/Custom_block/left_menu/second_floor/Ellipse 4.svg" alt=""
                                         id="dried_orange_img" draggable="true"> </img>
-                                    <p>草莓乾</p>
+                                    <p class="ingredients_text">草莓乾</p>
                                 </li>
                                 <li>
                                     <img src="./images/Custom_block/left_menu/second_floor/Ellipse 5.svg" alt=""
                                         id="dried_kiwi_fruit_img" draggable="true"> </img>
-                                    <p>柳橙乾</p>
+                                    <p class="ingredients_text">柳橙乾</p>
                                 </li>
                                 <li>
                                     <img src="./images/Custom_block/left_menu/second_floor/Ellipse 6.svg" alt=""
                                         id="dry_petals_img" draggable="true"> </img>
-                                    <p>奇異果乾</p>
+                                    <p class="ingredients_text">奇異果乾</p>
                                 </li>
                             </ul>
                         </div>
@@ -421,6 +443,7 @@
                 <div class="left_menu4">
                     <p class="left_menu4_p">裝飾</p>
                     <div class="left_menu4_div_input">
+
                         <input type="text" class="left_menu4_input" placeholder="請輸入關鍵字...">
                     </div>
                     <div class="left_menu4_search_p">
@@ -564,12 +587,12 @@
                 <div class="right_sidebar_div">
                     <a href="javascript:void(0)">
                         <img src="./images/Custom_block/right_sidebar/ph_share-thin-1.svg" alt="">
-                        <p>分享</p>
+                        <p class="right_sidebar_div_p">分享</p>
                         </img>
                     </a>
                     <a href="javascript:void(0)">
                         <img src="./images/Custom_block/right_sidebar/Vecto2.svg" alt="">
-                        <p>儲存</p>
+                        <p class="right_sidebar_div_p">儲存</p>
                         </img>
                     </a>
                 </div>
@@ -588,7 +611,7 @@
                             <!-- <p>縮放</p> -->
                         </a></li>
                     <li class="menu_below_li" id="menu_below_li_left1"><a href="javascript:void(0)"
-                            id="menu_below_bug"><img src="./images/Custom_block/menu_below/Frame 3.svg" alt=""
+                            id="menu_below_bug"><img src="./images/Custom_block/menu_below/Frame 3-3.svg" alt=""
                                 id="menu_below_bug_img">
                             <!-- <p>旋轉</p> -->
                         </a></li>
@@ -616,6 +639,8 @@
         <div id="Prompt_field">
             <div>
                 <ul>
+                    <li id="Prompt_field_img0" class="Prompt_field">
+                    </li>
                     <li id="Prompt_field_img1" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 1.svg" alt="">
                         <!-- <p>選擇巧克力</p> -->
