--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="./Menu.jsx"></script>
     <script src="./js/Menu.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,11 +35,11 @@
             <ul id="menu_id">
                 <div id="menu_id_menu">
                     <li id="menu_id_li"><a href="./index.html">HOME</a></li>
-                    <li id="menu_id_li"><a href="#">SHOP</a></li>
-                    <li id="menu_id_li"><a href="#">ABOUT</a></li>
-                    <li id="menu_id_li"><a href="#">NEWS</a></li>
-                    <li id="menu_id_li"><a href="#">Q&A</a></li>
-                    <li id="menu_id_menu_icon"><a href="#" id="customized">
+                    <li id="menu_id_li"><a href="./shop.html">SHOP</a></li>
+                    <li id="menu_id_li"><a href="./about.html">ABOUT</a></li>
+                    <li id="menu_id_li"><a href="./news.html">NEWS</a></li>
+                    <li id="menu_id_li"><a href="./QnA.html">Q&A</a></li>
+                    <li id="menu_id_menu_icon"><a href="./Customization.html" id="customized">
                             <p>customized</p>
                         </a></li>
                 </div>
@@ -46,9 +47,9 @@
                     <li><a href="#" id="menu_id_icon_search"><img
                                 src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
                     </li>
-                    <li id="menu_id_icon_show"><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                    <li id="menu_id_icon_show"><a href="./login.html"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
                     </li>
-                    <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                    <li><a href="./shopping_cart.html"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
                                 alt=""></a></li>
                 </div>
             </ul>
@@ -62,9 +63,9 @@
                         <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
                                 alt=""></a>
                     </div>
-                <li><a href="#" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                <li><a href="./login.html" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
                 </li>
-                <li><a href="#" id="menu_id_search_li3"><img
+                <li><a href="./shopping_cart.html" id="menu_id_search_li3"><img
                             src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
                 </li>
             </ul>
