--- a/ShoppingCar 3.html
+++ b/ShoppingCar 3.html
@@ -45,7 +45,7 @@
     <!-- <div class="background"> -->
 
     <main class="main">
-        <div class="process">
+        <!-- <div class="process">
             <div class="process_item">
                 <div class="process_border">
                     1
@@ -65,6 +65,11 @@
                     3
                 </div>
                 <p class="process_text">完成訂單</p>
+            </div>
+        </div> -->
+        <div class="process">
+            <div>
+                <img src="./images/shopping_cart_two/shopping_3.svg" alt="">
             </div>
         </div>
         <div class="box">
