--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -508,8 +508,9 @@
 
             </div>
             <div id="full_list_box_bottom">
-                <div>
-                    <img src="./images/shopping_cart_two/Checkout.svg" alt="">
+                <div><a href="./ShoppingCar 3.html">
+                        <img src="./images/shopping_cart_two/Checkout.svg" alt="">
+                    </a>
                 </div>
             </div>
         </div>
